<resources>
    <string name="app_name">Admin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_student">Student</string>
    <string name="menu_donor">Donor</string>
    <string name="menu_pads">Pads</string>
    <string name="menu_ewallet">Ewallet</string>
    <string name="menu_print">Print</string>
    <string name="menu_qr">QR</string>


    <string name="home_second">Home Second</string>
    <string name="title_activity_admin_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="admission_number">"Admission"</string>
    <string name="age">"Age"</string>
    <string name="grade">"Grade"</string>
    <string name="donor">"Donor"</string>
    <string name="company">"Company"</string>
    <string name="pads">"Pads"</string>
    <string name="numberOfPads">"NumberOfPads"</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
