<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item android:id="@+id/nav_student"
            android:icon="@drawable/ic_student"
            android:title="Student"/>
        <item android:id="@+id/nav_donor"
            android:icon="@drawable/ic_donor"
            android:title="Donor"/>
        <item android:id="@+id/nav_pads"
            android:icon="@drawable/ic_pads"
            android:title="pads"/>
        <item android:id="@+id/nav_ewallet"
            android:icon="@drawable/ic_ewallet"
            android:title="Ewalllet"/>
        <item android:id="@+id/nav_printer"
            android:icon="@drawable/ic_print"
            android:title="Print"/>
        <item android:id="@+id/nav_qr"
            android:icon="@drawable/ic_qr"
            android:title="QR"/>


    </group>
</menu>
